--- a/app/templates/repository/repositories.twig
+++ b/app/templates/repository/repositories.twig
@@ -10,7 +10,7 @@
             <thead>
             <tr>
                 <th></th>
-                <th>Github Location</th>
+                <th>Github Source</th>
                 <th>Notification E-mail</th>
                 <th>Actions</th>
             </tr>
@@ -18,7 +18,7 @@
             <tbody>
             {% for repo in repos %}
                 <tr>
-                    <td><a href="{{ urlFor('repo', {'repo': repo.key}) }}">{{ repo.key }}</a>
+                    <td><a href="{{ urlFor('repository', {'id': repo.id}) }}">{{ repo.key }}</a>
                     <td>
                         <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
                         <span class="icon">
@@ -29,7 +29,7 @@
                     </td>
                     <td>{{ repo.email }}</td>
                     <td>
-                        <a href="{{ urlFor('admin.repo.deployments', {'id': repo.id}) }}">Deployments</a>
+                        <a href="{{ urlFor('repository.status', {'id': repo.id}) }}">Status</a>
                     </td>
                 </tr>
             {% else %}
