--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -1,114 +1,82 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = repo.key %}
+{% set page_title = repository.key %}
 
 {% block content %}
-    <p><a class="btn--small btn--back" href="{{ urlFor('group', {'group': repo.group.key}) }}">Back to Repositories</a></p>
+    <h2><strong>{{ repository.key }}</strong> repository</h2>
 
-    <h2>{{ repo.key }} Dashboard</h2>
+    <h3>Description</h3>
+    <p>{{ repository.description }}</p>
 
-    <h3>Server Status</h3>
-    <p>This table shows the current status of all servers with deployment relationships to this repository.</p>
-    <div class="overflow-container">
-        <table>
-            <thead>
-                <th></th>
-                <th>Last Push</th>
-                <th>Build</th>
-                <th>Branch</th>
-                <th>Commit</th>
-                <th>Pushed</th>
-                <th></th>
-            </thead>
-            <tbody>
-                {% for status in statuses %}
-                    <tr>
-                        <td><a href="{{ urlFor('server', {'server': status.deploy.server.name}) }}">{{ status.deploy.server.name }}</a> ({{ status.deploy.server.environment.key }})</td>
-                        {% if status.latest %}
-                            <td>
-                                {% if status.latest.status == 'Success' %}
-                                    <span class="circle-green">{{ status.latest.status }}</span>
-                                {% elseif status.latest.status == 'Error' %}
-                                    <span class="circle-error">{{ status.latest.status }}</span>
-                                {% else %}
-                                    <span class="circle-orange">{{ status.latest.status }}</span>
-                                {% endif %}
-                                (<a href="{{ urlFor('push', {'push': status.latest.id}) }}">{{ status.latest.id }}</a>)
-                            </td>
-                        {% else %}
-                            <td>None</td>
-                        {% endif %}
-                        {% if status.success %}
-                            <td><a href="{{ urlFor('build', {'repo': repo.id, 'build': status.success.build.id}) }}">{{ status.success.build.id[:10] }}</a></td>
-                            <td>{{ status.success.build.branch[:20] }}</td>
-                            <td>
-                                <a href="{{ githubCommit(repo.githubUser, repo.githubRepo, status.success.build.commit) }}">{{ status.success.build.commit[:7] }}</a>
-                                <span class="icon">
-                                    <svg viewBox="0 0 32 32">
-                                        <use xlink:href="#github"></use>
-                                    </svg>
-                                </span>
-                            </td>
-                            <td>{{ status.success.end|date }}</td>
-                            <td><a href="{{ urlFor('rollback', {'repo': repo.key, 'server': status.success.deployment.server.id}) }}">Rollback</a></td>
-                        {% else %}
-                            <td colspan="5">Unknown</td>
-                        {% endif %}
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="7">
-                            No deployments found.
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <h3>Available Builds</h3>
-    <p>This table shows all recent available builds.</p>
-    {% include 'partials/build-table.twig' with {'builds': builds} %}
+    <h3>Github Source</h3>
     <p>
-        <a class="btn--small btn--toggles" href="{{ urlFor('build.start', {'repo': repo.key}) }}">Start New Build</a>
-        <a class="btn--small btn--toggles" href="{{ urlFor('build.history', {'repo': repo.key, 'page': 1}) }}">All Builds</a>
-        <a class="btn--small btn--toggles" href="{{ urlFor('push.history', {'repo': repo.key, 'page': 1}) }}">All Pushes</a>
+        <a href="{{ githubRepo(repository.githubUser, repository.githubRepo) }}">{{ repository.githubUser }}/{{ repository.githubRepo }}</a>
+        <span class="icon">
+            <svg viewBox="0 0 32 32">
+                <use xlink:href="#github"></use>
+            </svg>
+        </span>
     </p>
 
-    <h3>Repository Details</h3>
-    <p>These values can only be changed by an administrator.</p>
-    <div class="overflow-container">
-        <table>
-            <tbody>
+    <h3>Notification E-mail</h3>
+    <p>{{ repository.email }}</p>
+
+    <h3>Build Command</h3>
+    <p>{{ repository.buildCmd ?: 'No command entered.' }}</p>
+
+    <h3>Pre-Push Command</h3>
+    <p>{{ repository.prePushCmd ?: 'No command entered.' }}</p>
+
+    <h3>Post-Push Command</h3>
+    <p>{{ repository.postPushCmd ?: 'No command entered.' }}</p>
+
+    <h3>Server deployments:</h3>
+    {% if deployments %}
+        <div>
+            <table>
+                <thead>
                 <tr>
-                    <td>Github Location</td>
-                    <td>
-                        <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
-                        <span class="icon">
-                            <svg viewBox="0 0 32 32">
-                                <use xlink:href="#github"></use>
-                            </svg>
-                        </span>
-                    </td>
+                    <th>Hostname</th>
+                    <th>Environment</th>
+                    <th>Path</th>
                 </tr>
-                <tr>
-                    <td>Contact Email</td>
-                    <td>{{ repo.email }}</td>
-                </tr>
-                <tr>
-                    <td>Build Command</td>
-                    <td>{{ repo.buildCmd }}</td>
-                </tr>
-                <tr>
-                    <td>Pre-Push Command</td>
-                    <td>{{ repo.prePushCmd }}</td>
-                </tr>
-                <tr>
-                    <td>Post-Push Command</td>
-                    <td>{{ repo.postPushCmd }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                {% for deployment in deployments %}
+                    <tr class="env-row-{{ deployment.server.environment.key }}">
+                        <td>{{ deployment.server.name }}</td>
+                        <td>{{ deployment.server.environment.key }}</td>
+                        <td>{{ deployment.path }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% else %}
+        <p>There are no deployments associated with this repository.</p>
+    {% endif %}
+
+    {# primary action #}
+    {% if isAdmin %}
+        <p>
+            <a class="btn" href="{{ urlFor('repository.admin.edit') }}">Edit</a>
+        </p>
+    {% endif %}
+
+    {# secondary actions #}
+    <p>
+        <a href="{{ urlFor('repository.status', {id: repo.id}) }}">Repository status</a>
+        <a href="{{ urlFor('repositories') }}">View all repositories</a>
+
+        {% if isAdmin %}
+            <a href="{{ urlFor('repository.deployments', {'id': repository.id}) }}">Manage deployments</a>
+        {% endif %}
+
+        {% if isAdmin and not deployments %}
+            <form action="{{ urlFor('repository.admin.remove.handle', {id: repository.id}) }}" method="post">
+                <input class="btn" type="submit" value="Remove">
+            </form>
+        {% endif %}
+    </p>
 
 {% endblock %}
