Fixing repo --> repository names route links.

--- a/app/templates/admin/dashboard.twig
+++ b/app/templates/admin/dashboard.twig
@@ -6,7 +6,7 @@
     <h2>Admin Dashboard</h2>
 
     <ul>
-        <li><a href="{{ urlFor('admin.repos') }}" title="Manage Repositories">Manage Repositories</a></li>
+        <li><a href="{{ urlFor('repositories') }}" title="Manage Repositories">Manage Repositories</a></li>
         <li><a href="{{ urlFor('environments') }}" title="Manage Environments">Manage Environments</a></li>
         <li><a href="{{ urlFor('users') }}" title="Manage Users">Users</a></li>
     </ul>
