--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -59,6 +59,7 @@
                             <li><a href="{{ urlFor('admin.dashboard') }}" title="admin dashboard">Admin</a></li>
                         {% endif %}
                         <li><a href="{{ urlFor('user.current') }}" title="profile">Profile</a></li>
+                        <li><a href="{{ urlFor('help') }}" title="help">Help</a></li>
                         <li><a href="{{ urlFor('logout') }}" title="logout">Logout</a></li>
                     </ul>
                 </nav>
