--- a/app/templates/repository.build.start.twig
+++ b/app/templates/repository.build.start.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'repo': repo.key}) }}">Back to Repository</a></p>
+    <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'id': repo.id}) }}">Back to Repository</a></p>
 
     <h2>Create New {{ repo.key }} Build</h2>
 
