--- a/app/templates/repository.build.history.twig
+++ b/app/templates/repository.build.history.twig
@@ -3,7 +3,7 @@
 {% set page_title = repo.key~" Build History" %}
 
 {% block content %}
-    <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'repo': repo.key}) }}">Back to Repository</a></p>
+    <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'id': repo.id}) }}">Back to Repository</a></p>
 
     <h2>{{ repo.key }} Build History</h2>
 
