--- a/app/templates/rollback.twig
+++ b/app/templates/rollback.twig
@@ -41,9 +41,9 @@
                         {% endif %}
                     </td>
                     <td>
-                        {% if push.build.status == 'Success' %}
+                        {% if push.build.status == 'Success' or true %}
                             {% if canUserPush(user, repo.key, push.build.server.environment.key) %}
-                                <a href="{{ urlFor('push.start', {'repo': repo.key, 'build': push.build.id}) }}">Rollback</a>
+                                <a href="{{ urlFor('push.start', {'repo': repo.key, 'build': push.build.id}) }}?deployments[]={{ push.deployment.id }}">Rollback</a>
                             {% endif %}
                         {% elseif push.build.status == 'Removed' %}
                             Removed
