--- a/sass/partials/patterns/_terminal.scss
+++ b/sass/partials/patterns/_terminal.scss
@@ -1,12 +1,34 @@
 .terminal {
+    background-image: linear-gradient(-90deg, #aeaeae 0%, #787878 32%, #717171 100%);
+    border-size: 3px;
+    border-image: linear-gradient(-90deg, #717171 0%, #787878 32%, #aeaeae 100%) 32% stretch;
+    padding: 3px;
+}
+
+.terminal:after {
+    content: "HAL 9000 SERIES TERMINAL";
+    color: black;
+    margin-left: .1em;
+}
+
+.terminal__bg {
     -webkit-filter:blur(0.75px);
     background-color:#2e0b0b;
     padding: 0;
     position:relative;
 }
 
+.terminal__entry {
+    background:transparent;
+    color: rgb(255, 97, 97);
+    margin:0;
+    padding: 1em;
+    text-shadow:#fd8989 0 -1px 35px;
+    text-transform: uppercase;
+}
+
 $scanSize: 1px;
-.terminal pre:before {
+.terminal__entry:before {
     background: repeating-linear-gradient(
         top,
         transparent 0px,
@@ -32,25 +54,15 @@ $scanSize: 1px;
     width:100%;
 }
 
-.terminal pre {
-    background:transparent;
-    border: 2px solid #491b1b;
-    color:#fc7c7c;
-    outline: 3px ridge #7a2323;
-    padding: 1em;
-    text-shadow:#fd8989 0 -1px 35px;
-    text-transform: uppercase;
-}
-
-.terminal pre span {
+.terminal__entry span {
     visibility: hidden;
 }
 
-.terminal pre span.typed {
+.terminal__entry span.typed {
     visibility: visible;
 }
 
-.terminal pre .cursor:after {
+.terminal__entry .cursor:after {
     // -webkit-animation:blink 2s 120;
     // animation:blink 2s 120;
     content:"\220E";
