Add new sass partials

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,6 +45,8 @@
 @import "partials/js";
 @import "partials/base/forms";
 @import "partials/base/tables";
+@import "partials/base/error";
 @import "partials/patterns/nav";
 @import "partials/patterns/buttons";
 @import "partials/patterns/alert-bar";
+@import "partials/patterns/terminal";
