--- a/app/templates/error.twig
+++ b/app/templates/error.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = "Not Found" %}
+{% set page_title = 'Error' %}
+
+{% set name = getUsersActualName(user) %}
 
 {% block content %}
-    <div class="error-page">
-        <h1>{{ message }}</h1>
-        <img src="/img/error/{{ random(['blink.gif', 'walk.gif']) }}" />
-        <p>
-            The 9000 series has a perfect operational record. It can only be attributable to human error.
-        </p>
+<div class="error-page">
+    <div class="eye"></div>
+
+    <div class="terminal">
+        <div class="terminal__bg"><pre class="terminal__entry">
+An error has occured: {{ message }}
+
+I am sorry this happened to you, {{ name }}.
+
+The 9000 series has a perfect operational record. It can only be attributable to human error.
+        </pre></div>
     </div>
+</div>
 {% endblock %}
