--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -8,7 +8,7 @@
     <h3>Servers</h3>
     <ul>
         {% for server in servers %}
-            <li><a href="{{ urlFor('server', {server: server.name}) }}">{{ server.name }}</a></li>
+            <li><a href="{{ urlFor('server', {'id': server.id}) }}">{{ server.name }}</a></li>
         {% else %}
             <li>There are no servers associated with this environment.</li>
         {% endfor %}
