--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -68,7 +68,7 @@
     <p>This table shows all recent available builds.</p>
     {% include 'partials/build-table.twig' with {'builds': builds} %}
     <p>
-        <a class="btn--small btn--toggles" href="{{ urlFor('build.start', {'repo': repo.key}) }}">Start New Build</a>
+        <a class="btn--small btn--toggles" href="{{ urlFor('build.start', {'id': repo.id}) }}">Start New Build</a>
         <a class="btn--small btn--toggles" href="{{ urlFor('build.history', {'id': repo.id, 'page': 1}) }}">All Builds</a>
         <a class="btn--small btn--toggles" href="{{ urlFor('push.history', {'id': repo.id, 'page': 1}) }}">All Pushes</a>
     </p>
