Make form checklists look not bad

--- a/app/templates/repository/admin.add.twig
+++ b/app/templates/repository/admin.add.twig
@@ -21,7 +21,7 @@
                 </li>
                 <li>
                     <p>Group</p>
-                    <ul>
+                    <ul class="check-list">
                     {% for group in groups %}
                         {% set checked = '' %}
                         {% if form.group == group.id %}
