--- a/app/templates/server/admin.edit.twig
+++ b/app/templates/server/admin.edit.twig
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <p>Environment</p>
-                    <ul>
+                    <ul class="check-list">
                     {% for environment in environments %}
                         {% set checked = '' %}
                         {% if form.environment == environment.id %}
