--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -24,7 +24,7 @@
                 </li>
                 <li>
                     <p>Group</p>
-                    <ul>
+                    <ul class="check-list">
                     {% for group in groups %}
                         {% set checked = '' %}
                         {% if form.group == group.id %}
