--- a/app/templates/server/admin.add.twig
+++ b/app/templates/server/admin.add.twig
@@ -21,7 +21,7 @@
                 </li>
                 <li>
                     <p>Environment</p>
-                    <ul>
+                    <ul class="check-list">
                     {% for environment in environments %}
                         {% set checked = '' %}
                         {% if form.environment == environment.id %}
